Login - Sign up
V 10.28.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AndroidAuthentication</string>
+    <string name="auth_failed">ERROR</string>
+    <string name="SinOut">Cerrar Sesion</string>
+    <string name="Configuracion">Configuración</string>
+    <string name="Name">Nombre</string>
+    <string name="Lastmame">Apellido</string>
+    <string name="Email">Correo</string>
+    <string name="Password">Contraseña</string>
+    <string name="Repassword">Repita Contraseña</string>
 </resources>
