Map as activity
Co-Authored-By: Miguel Gutiérrez <miguelgutierrezi@users.noreply.github.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="Nombre">Nombre:</string>
     <string name="Precio">Precio:</string>
     <string name="Calificacion">Calificación</string>
+    <string name="menuitem1">Claro</string>
+    <string name="menuitem2">Oscuro</string>
 </resources>
